[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-docs"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.6.7",
    "mkdocstrings~=0.29.0",
    "mkdocstrings-python~=1.14.1",
    "mkdocs-macros-plugin~=1.3.7",
    "mkdocs-site-urls~=0.2.0",
    "mkdocs-literate-nav~=0.6.1",
    "httpx",
    "rich",
]

[project.scripts]
pulp-docs = "pulp_docs.cli:main"

[project.entry-points."mkdocs.plugins"]
PulpDocs = "pulp_docs.plugin:PulpDocsPlugin"

[tool.setuptools]
include-package-data=true

[tool.setuptools.package-data]
pulp_docs = ["data/**"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
