[build-system]
requires = ["hatchling~=1.14"]
build-backend = "hatchling.build"

[project]
name = "pulp-docs"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.6.7",
    "mkdocstrings~=0.29.0",
    "mkdocstrings-python~=1.14.1",
    "mkdocs-macros-plugin~=1.3.7",
    "mkdocs-site-urls~=0.2.0",
    "mkdocs-literate-nav~=0.6.1",
    "httpx",
    "rich",
    "GitPython~=3.1.44",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
descriptions = "Pulp Docs is a documentation aggregation tool for the Pulp Project."
readme = "README.md"

[project.scripts]
pulp-docs = "pulp_docs.cli:main"

[project.entry-points."mkdocs.plugins"]
PulpDocs = "pulp_docs.plugin:PulpDocsPlugin"

###########
## BUILD ##
###########

[tool.hatch.build.targets.wheel]
packages = ["src/pulp_docs"]

[tool.hatch.build.targets.wheel.force-include]
# enable using the installed package directly for development
"mkdocs.yml" = "pulp_docs/mkdocs.yml"
"pulpproject.org" = "pulp_docs/pulpproject.org"
"custom" = "pulp_docs/custom"

#############
## TESTING ##
#############

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

##########
## LINT ##
##########

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
